const { mount, flushPromises } = require( '@vue/test-utils' );
const api = require( '../../../resources/ext.readingLists.api/index.js' );

const LIST = require( '../fixtures/list.json' );
const ENTRIES = require( '../fixtures/entries.json' );
const PAGES = require( '../fixtures/pages.json' );
const ALL_ENTRIES = require( '../fixtures/allentries.json' );
const ALL_PAGES = require( '../fixtures/allpages.json' );

function setupEntriesApiStub() {
	return api.stubApi( {
		get: jest.fn( ( { action, meta, rllist, list, rlelists, prop } ) => {
			if ( action === 'query' ) {
				if ( meta === 'readinglists' && rllist === 12345 ) {
					return LIST;
				} else if ( list === 'readinglistentries' && rlelists === 12345 ) {
					return ENTRIES;
				} else if ( prop !== undefined ) {
					return PAGES;
				}
			}
		} )
	} );
}

function setupAllItemsApiStub() {
	return api.stubApi( {
		get: jest.fn( ( { action, list, rlelists, prop } ) => {
			if ( action === 'query' ) {
				if ( list === 'readinglistentries' && rlelists === undefined ) {
					return ALL_ENTRIES;
				} else if ( prop !== undefined ) {
					return ALL_PAGES;
				}
			}
		} )
	} );
}

describe( 'Entries', () => {
	beforeEach( () => {
		mw.config = {
			get: jest.fn( ( key ) => {
				// Disable the beta survey.
				if ( key === 'wgReadingListsEnableBetaQuickSurvey' ) {
					return false;
				}
			} )
		};
		mw.storage = {
			get: jest.fn()
		};
		mw.util = {
			throttle: ( fn ) => fn,
			debounce: ( fn ) => fn,
			getUrl: jest.fn( ( path ) => `/wiki/${ path }` )
		};
	} );

	afterEach( () => {
		jest.restoreAllMocks();
	} );

	describe( 'without custom lists', () => {
		test( 'renders with toolbar disabled', async () => {
			setupEntriesApiStub();

			const Entries = require( '../../../resources/ext.readingLists.special/pages/Entries.vue' );
			const wrapper = mount( Entries, { props: { listId: 12345 } } );

			await flushPromises();

			expect( wrapper.element ).toMatchSnapshot();
		} );

		test( 'renders "Show more items" button', async () => {
			setupEntriesApiStub();

			const Entries = require( '../../../resources/ext.readingLists.special/pages/Entries.vue' );
			const wrapper = mount( Entries, { props: { listId: 12345 } } );

			await flushPromises();

			const showMoreButton = wrapper.find( '.cdx-button' );
			expect( showMoreButton.exists() ).toBe( true );
			expect( showMoreButton.text() ).toBe( 'Show more items' );
		} );

		test( 'renders all items from all lists on special page', async () => {
			setupAllItemsApiStub();

			const Entries = require( '../../../resources/ext.readingLists.special/pages/Entries.vue' );
			const wrapper = mount( Entries );

			await flushPromises();

			expect( wrapper.vm.isAllListItems ).toBe( true );
			expect( wrapper.vm.isDefaultList ).toBe( false );
			expect( wrapper.vm.entries.length ).toBeGreaterThan( 0 );
			expect( wrapper.find( 'ul.reading-lists-items' ).attributes( 'aria-label' ) )
				.toBe( 'All items' );
			expect( wrapper.element ).toMatchSnapshot();
		} );

		test( 'renders import dialog slot content', async () => {
			const Entries = require( '../../../resources/ext.readingLists.special/pages/Entries.vue' );
			const wrapper = mount( Entries, {
				props: {
					imported: {
						name: 'Imported list',
						description: '',
						default: false,
						list: []
					}
				},
				slots: {
					'import-dialog': '<div class="mock-import-dialog"></div>'
				}
			} );

			await flushPromises();
			await wrapper.vm.$nextTick();

			expect( wrapper.find( '.mock-import-dialog' ).exists() ).toBe( true );
		} );
	} );

	describe( 'with custom lists', () => {
		beforeEach( () => {
			jest.resetModules();

			jest.mock(
				'../../../resources/ext.readingLists.special/config.json',
				() => ( {
					ReadingListsCustomLists: true
				} ),
				{ virtual: true }
			);
		} );

		test( 'renders the nav bar when custom lists are enabled', async () => {
			const Entries = require( '../../../resources/ext.readingLists.special/pages/Entries.vue' );
			const wrapper = mount( Entries );

			expect( wrapper.element ).toMatchSnapshot();
		} );
	} );
} );
