// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entries with custom lists nav bar does not disappear when show more is clicked 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <div
    class="readinglists-nav-bar"
  >
    <!--v-if-->
    <a
      class="readinglists-special-nav-link"
    >
      
      All items
      
    </a>
    <div
      class="cdx-menu-button"
    >
      <button
        aria-controls="v-2"
        aria-expanded="false"
        aria-haspopup="menu"
        class="cdx-button cdx-button--action-progressive cdx-button--weight-quiet cdx-button--size-medium"
        id="v-1"
      >
        
        
        Collections 
        <span
          class="cdx-icon cdx-icon--medium"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <g>
              <path
                d="m16.7 8-6 6H9.3l-6-6 1.4-1.4 5.3 5.3 5.3-5.3z"
              />
            </g>
          </svg>
        </span>
        
        
      </button>
      <div
        class="cdx-menu-button__menu-wrapper"
      >
        <!--teleport start-->
        <div
          class="cdx-menu cdx-menu-button__menu"
          style="display: none; visibility: hidden; position: absolute; top: 0px; left: 0px; transform: translate(0px, 4px); width: -32px; max-height: 128px;"
        >
          <ul
            aria-labelledby="v-1"
            class="cdx-menu__listbox"
            id="v-2"
            role="menu"
            tabindex="-1"
          >
            <!--v-if-->
            <!--v-if-->
            
            
            <!--v-if-->
          </ul>
        </div>
        <!--teleport end-->
      </div>
    </div>
    <div
      class="readinglists-nav-bar-settings"
    >
      <button
        aria-controls="readinglists-collection-settings-actions"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Collection settings"
        class="cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-medium cdx-button--icon-only readinglists-nav-bar-settings-button"
      >
        
        <span
          class="cdx-icon cdx-icon--large"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <g>
              <path
                d="M11.835 3.505a6.7 6.7 0 011.46.603l2.362-1.18 1.414 1.415-1.18 2.361a6.7 6.7 0 01.603 1.46L19 9v2l-2.506.835a6.7 6.7 0 01-.603 1.46l1.18 2.362-1.414 1.414-2.362-1.18a6.7 6.7 0 01-1.46.603L11 19H9l-.836-2.506a6.7 6.7 0 01-1.46-.603l-2.361 1.18-1.414-1.414 1.18-2.362a6.7 6.7 0 01-.604-1.46L1 11V9l2.505-.836a6.7 6.7 0 01.603-1.46l-1.18-2.361 1.415-1.414 2.361 1.18a6.7 6.7 0 011.46-.604L9 1h2zM10 7a3 3 0 100 6 3 3 0 000-6"
              />
            </g>
          </svg>
        </span>
        
      </button>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <p
    class="reading-lists-sorting"
  >
    Sorted by most recent.
  </p>
  
  <!-- role="list" needed for Safari support, refer to T435864. -->
  <ul
    aria-label="Example list"
    class="reading-lists-items reading-lists-items--grid-view"
    role="list"
  >
    
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Citation_needed_example"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Citation needed example
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item reading-lists-item--has-thumbnail"
    >
      <a
        class="cdx-card cdx-card--is-link cdx-card--thumbnail-position-block-start reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/New_York_Yankees"
      >
        <span
          class="cdx-thumbnail cdx-card__thumbnail"
        >
          <span
            class="cdx-thumbnail__placeholder"
          >
            <span
              class="cdx-icon cdx-icon--medium cdx-thumbnail__placeholder__icon--vue"
            >
              <svg
                aria-hidden="true"
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <!--v-if-->
                <g>
                  <path
                    d="M19 19H1V1h18zm-8.5-6-2-2L5 15h10V8zm-4-8a1.5 1.5 0 100 3 1.5 1.5 0 000-3"
                  />
                </g>
              </svg>
            </span>
          </span>
          <transition-stub
            appear="false"
            css="true"
            name="cdx-thumbnail__image"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </span>
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            New York Yankees
            
          </span>
          <span
            class="cdx-card__text__description"
          >
            
            Major League Baseball franchise in New York City
            
          </span>
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item reading-lists-item--has-thumbnail"
    >
      <a
        class="cdx-card cdx-card--is-link cdx-card--thumbnail-position-block-start reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Main_Page"
      >
        <span
          class="cdx-thumbnail cdx-card__thumbnail"
        >
          <span
            class="cdx-thumbnail__placeholder"
          >
            <span
              class="cdx-icon cdx-icon--medium cdx-thumbnail__placeholder__icon--vue"
            >
              <svg
                aria-hidden="true"
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <!--v-if-->
                <g>
                  <path
                    d="M19 19H1V1h18zm-8.5-6-2-2L5 15h10V8zm-4-8a1.5 1.5 0 100 3 1.5 1.5 0 000-3"
                  />
                </g>
              </svg>
            </span>
          </span>
          <transition-stub
            appear="false"
            css="true"
            name="cdx-thumbnail__image"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </span>
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Main Page
            
          </span>
          <span
            class="cdx-card__text__description"
          >
            
            Main page of the English Wikipedia
            
          </span>
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/New_York"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            New York
            
          </span>
          <span
            class="cdx-card__text__description"
          >
            
            Topics referred to by the same term
            
          </span>
          <!--v-if-->
        </span>
      </a>
    </li>
    
  </ul>
  <!--v-if-->
  
  
  <div
    aria-disabled="false"
    aria-label="Please wait..."
    class="cdx-progress-bar cdx-progress-bar--block cdx-progress-bar--enabled"
    role="progressbar"
  >
    <div
      class="cdx-progress-bar__bar"
    />
  </div>
  <!--v-if-->
  
  
</div>
`;

exports[`Entries with custom lists nav bar only renders after content has finished loading 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  
  <div
    aria-disabled="false"
    aria-label="Please wait..."
    class="cdx-progress-bar cdx-progress-bar--block cdx-progress-bar--enabled"
    role="progressbar"
  >
    <div
      class="cdx-progress-bar__bar"
    />
  </div>
  <!--v-if-->
  
  
</div>
`;

exports[`Entries with custom lists renders the nav bar when custom lists are enabled 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <div
    class="readinglists-nav-bar"
  >
    <!--v-if-->
    <a
      class="readinglists-special-nav-link readinglists-special-nav-link--active"
    >
      
      All items
      
    </a>
    <div
      class="cdx-menu-button"
    >
      <button
        aria-controls="v-2"
        aria-expanded="false"
        aria-haspopup="menu"
        class="cdx-button cdx-button--action-progressive cdx-button--weight-quiet cdx-button--size-medium"
        id="v-1"
      >
        
        
        Collections 
        <span
          class="cdx-icon cdx-icon--medium"
        >
          <svg
            aria-hidden="true"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!--v-if-->
            <g>
              <path
                d="m16.7 8-6 6H9.3l-6-6 1.4-1.4 5.3 5.3 5.3-5.3z"
              />
            </g>
          </svg>
        </span>
        
        
      </button>
      <div
        class="cdx-menu-button__menu-wrapper"
      >
        <!--teleport start-->
        <div
          class="cdx-menu cdx-menu-button__menu"
          style="display: none; visibility: hidden; position: absolute; top: 0px; left: 0px; transform: translate(0px, 4px); width: -32px; max-height: 128px;"
        >
          <ul
            aria-labelledby="v-1"
            class="cdx-menu__listbox"
            id="v-2"
            role="menu"
            tabindex="-1"
          >
            <!--v-if-->
            <!--v-if-->
            
            
            <!--v-if-->
          </ul>
        </div>
        <!--teleport end-->
      </div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <p
    class="reading-lists-sorting"
  >
    Sorted by most recent.
  </p>
  
  <!-- role="list" needed for Safari support, refer to T435864. -->
  <ul
    aria-label="All items"
    class="reading-lists-items reading-lists-items--grid-view"
    role="list"
  >
    
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Sleep"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Sleep
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Birthday"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Birthday
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Nap"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Nap
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/TestPage"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            TestPage
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Germany"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Germany
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    
  </ul>
  
  <!--v-if-->
  
  
  <!--v-if-->
  
</div>
`;

exports[`Entries without custom lists renders all items from all lists on special page 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <p
    class="reading-lists-sorting"
  >
    Sorted by most recent.
  </p>
  
  <!-- role="list" needed for Safari support, refer to T435864. -->
  <ul
    aria-label="All items"
    class="reading-lists-items reading-lists-items--grid-view"
    role="list"
  >
    
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Sleep"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Sleep
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Birthday"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Birthday
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Nap"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Nap
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/TestPage"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            TestPage
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Germany"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Germany
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    
  </ul>
  
  <!--v-if-->
  
  
  <!--v-if-->
  
</div>
`;

exports[`Entries without custom lists renders with toolbar disabled 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <!--v-if-->
  
  <h2
    class="reading-lists-title"
  >
    Example list
  </h2>
  <p
    class="reading-lists-description"
  >
    For testing purposes
  </p>
  
  <!--v-if-->
  <p
    class="reading-lists-sorting"
  >
    Sorted by most recent.
  </p>
  
  <!-- role="list" needed for Safari support, refer to T435864. -->
  <ul
    aria-label="Example list"
    class="reading-lists-items reading-lists-items--grid-view"
    role="list"
  >
    
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Citation_needed_example"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Citation needed example
            
          </span>
          <!--v-if-->
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item reading-lists-item--has-thumbnail"
    >
      <a
        class="cdx-card cdx-card--is-link cdx-card--thumbnail-position-block-start reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/New_York_Yankees"
      >
        <span
          class="cdx-thumbnail cdx-card__thumbnail"
        >
          <span
            class="cdx-thumbnail__placeholder"
          >
            <span
              class="cdx-icon cdx-icon--medium cdx-thumbnail__placeholder__icon--vue"
            >
              <svg
                aria-hidden="true"
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <!--v-if-->
                <g>
                  <path
                    d="M19 19H1V1h18zm-8.5-6-2-2L5 15h10V8zm-4-8a1.5 1.5 0 100 3 1.5 1.5 0 000-3"
                  />
                </g>
              </svg>
            </span>
          </span>
          <transition-stub
            appear="false"
            css="true"
            name="cdx-thumbnail__image"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </span>
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            New York Yankees
            
          </span>
          <span
            class="cdx-card__text__description"
          >
            
            Major League Baseball franchise in New York City
            
          </span>
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item reading-lists-item--has-thumbnail"
    >
      <a
        class="cdx-card cdx-card--is-link cdx-card--thumbnail-position-block-start reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/Main_Page"
      >
        <span
          class="cdx-thumbnail cdx-card__thumbnail"
        >
          <span
            class="cdx-thumbnail__placeholder"
          >
            <span
              class="cdx-icon cdx-icon--medium cdx-thumbnail__placeholder__icon--vue"
            >
              <svg
                aria-hidden="true"
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <!--v-if-->
                <g>
                  <path
                    d="M19 19H1V1h18zm-8.5-6-2-2L5 15h10V8zm-4-8a1.5 1.5 0 100 3 1.5 1.5 0 000-3"
                  />
                </g>
              </svg>
            </span>
          </span>
          <transition-stub
            appear="false"
            css="true"
            name="cdx-thumbnail__image"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </span>
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            Main Page
            
          </span>
          <span
            class="cdx-card__text__description"
          >
            
            Main page of the English Wikipedia
            
          </span>
          <!--v-if-->
        </span>
      </a>
    </li>
    <li
      class="reading-lists-item"
    >
      <a
        class="cdx-card cdx-card--is-link reading-lists-item__card"
        href="https://en.wikipedia.org/wiki/New_York"
      >
        <!--v-if-->
        <span
          class="cdx-card__text"
        >
          <span
            class="cdx-card__text__title"
          >
            
            New York
            
          </span>
          <span
            class="cdx-card__text__description"
          >
            
            Topics referred to by the same term
            
          </span>
          <!--v-if-->
        </span>
      </a>
    </li>
    
  </ul>
  
  <button
    class="cdx-button cdx-button--action-default cdx-button--weight-normal cdx-button--size-medium cdx-button--framed"
  >
    
    Show more items
    
  </button>
  
  
  <!--v-if-->
  
</div>
`;
